[gd_scene load_steps=25 format=3 uid="uid://deb6xe72w2557"]

[ext_resource type="Script" path="res://src/node_2d.gd" id="1_pjd1t"]
[ext_resource type="Script" path="res://src/GameWorld.gd" id="2_fiulx"]
[ext_resource type="PackedScene" uid="uid://bnodrw2cqtgtg" path="res://src/tile_map.tscn" id="3_ubmfj"]
[ext_resource type="PackedScene" uid="uid://5royanfnfv60" path="res://src/walk_marker.tscn" id="6_kq1q8"]
[ext_resource type="PackedScene" uid="uid://drapmpdq3r5vo" path="res://src/units/king.tscn" id="7_8bfo6"]
[ext_resource type="PackedScene" uid="uid://c0o85tyw370q5" path="res://src/enemy_structures/small_camp.tscn" id="9_garsw"]
[ext_resource type="Texture2D" uid="uid://ce53mwj0g5q2m" path="res://img/markers/rally_point.png" id="10_grk02"]
[ext_resource type="PackedScene" uid="uid://c6kghfkovuej0" path="res://src/gui/gui_canvas_layer.tscn" id="11_4suld"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="11_co1w3"]
[ext_resource type="Theme" uid="uid://s2bj74tt0y7f" path="res://godot_state_charts_examples/new_theme.tres" id="12_shb05"]
[ext_resource type="Script" path="res://src/gui/PauseHandler.gd" id="14_yq3yx"]
[ext_resource type="Script" path="res://src/gui/map_control.gd" id="15_6jldt"]
[ext_resource type="Texture2D" uid="uid://b1ec4n2gjlrsa" path="res://img/ui/player_marker.png" id="15_osyca"]
[ext_resource type="PackedScene" uid="uid://caq4t0knoifyv" path="res://src/units/death_warden.tscn" id="15_ssx2t"]
[ext_resource type="Texture2D" uid="uid://ldddssugey7c" path="res://img/ui/danger_marker.png" id="16_bratw"]
[ext_resource type="Texture2D" uid="uid://d4bgxvjahlke" path="res://img/ui/king_marker.png" id="17_k18ke"]
[ext_resource type="PackedScene" uid="uid://c3t8nod3j2hqm" path="res://src/gui/rectangle_2d.tscn" id="18_ffctd"]
[ext_resource type="Script" path="res://src/tile_map_marker.gd" id="19_xu1vl"]

[sub_resource type="Gradient" id="Gradient_8sg87"]
colors = PackedColorArray(0, 0.556863, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qa3f2"]
gradient = SubResource("Gradient_8sg87")
width = 96

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tx7oa"]
vertices = PackedVector2Array(4769, 60, 2603, 600, 2462, 604, 1342, 521, 1337, 443, 1344, 51, 4791, 2798, 2946, 955, 2890, 834, 2470, 934, 34, 2787, 1336, 980, 34.0001, 973.66, 908, 977, 853, 973, 907, 812, 852, 815, 34, 810.502, 34, 32, 1153, 51, 1147, 445, 1158, 809, 1161, 522, 2631, 806)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(0, 6, 7, 8), PackedInt32Array(9, 7, 6, 10, 11), PackedInt32Array(11, 3, 2, 9), PackedInt32Array(11, 10, 12, 13), PackedInt32Array(13, 12, 14), PackedInt32Array(15, 13, 14, 16), PackedInt32Array(16, 17, 18, 19, 20, 15), PackedInt32Array(21, 15, 20, 22), PackedInt32Array(22, 20, 4, 3), PackedInt32Array(1, 0, 8, 23)])
outlines = Array[PackedVector2Array]([PackedVector2Array(34, 32, 1153, 51, 1147, 445, 1337, 443, 1344, 51, 4769, 60, 4791, 2798, 34, 2787, 34.0001, 973.66, 853, 973, 852, 815, 34, 810.502), PackedVector2Array(1161, 522, 1158, 809, 907, 812, 908, 977, 1336, 980, 1342, 521), PackedVector2Array(2462, 604, 2470, 934, 2946, 955, 2890, 834, 2631, 806, 2603, 600)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tay0"]
size = Vector2(1151, 719)

[sub_resource type="Gradient" id="Gradient_nruax"]
colors = PackedColorArray(0.556953, 0.556953, 0.556953, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1wep1"]
gradient = SubResource("Gradient_nruax")
repeat = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_pjd1t")

[node name="GameWorld" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_fiulx")

[node name="TileMap" parent="GameWorld" instance=ExtResource("3_ubmfj")]

[node name="Camera2D" type="Camera2D" parent="GameWorld"]
position = Vector2(617, 524)
limit_left = -100
limit_top = -100
limit_right = 3000
limit_bottom = 3000

[node name="WalkMarker" parent="GameWorld" instance=ExtResource("6_kq1q8")]
visible = false

[node name="King" parent="GameWorld" instance=ExtResource("7_8bfo6")]
position = Vector2(116, 519)

[node name="TileHighlighter" type="Sprite2D" parent="GameWorld"]
visible = false
position = Vector2(345, 275)
texture = SubResource("GradientTexture2D_qa3f2")
centered = false

[node name="SmallCamp" parent="GameWorld" instance=ExtResource("9_garsw")]
position = Vector2(875, 485)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="GameWorld"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_tx7oa")

[node name="SmallCamp2" parent="GameWorld" instance=ExtResource("9_garsw")]
position = Vector2(2751, 784)
health_upgrade_rate = 1.0
attack_upgrade_rate = 0.1

[node name="SmallCamp3" parent="GameWorld" instance=ExtResource("9_garsw")]
position = Vector2(897, 1546)
attack_upgrade_rate = 0.5
shots_per_second_upgrade_rate = 0.1

[node name="RallyPointCursor" type="Sprite2D" parent="GameWorld"]
visible = false
texture = ExtResource("10_grk02")

[node name="RallyPossibleArea" type="Area2D" parent="GameWorld"]
visible = false
collision_layer = 8
collision_mask = 0

[node name="RallyShape2D" type="CollisionShape2D" parent="GameWorld/RallyPossibleArea"]
position = Vector2(596.5, 469.5)
shape = SubResource("RectangleShape2D_5tay0")

[node name="RallyRoot" type="Node2D" parent="GameWorld"]
position = Vector2(658, 490)

[node name="DeathWarden" parent="GameWorld" instance=ExtResource("15_ssx2t")]
position = Vector2(436.54, 432.999)

[node name="GUICanvasLayer" parent="." instance=ExtResource("11_4suld")]
offset = Vector2(1.655, 0)
transform = Transform2D(1, 0, 0, 1, 1.655, 0)

[node name="StateChartDebugger" parent="GUICanvasLayer" instance=ExtResource("11_co1w3")]
modulate = Color(1, 1, 1, 0.572549)
z_index = 40
offset_left = 375.0
offset_top = 113.0
offset_right = -101.0
offset_bottom = -94.0
theme = ExtResource("12_shb05")
enabled = false
initial_node_to_watch = NodePath("../../GameWorld/DeathWarden")

[node name="MapControl" type="Control" parent="GUICanvasLayer" node_paths=PackedStringArray("camera_object", "tilemap")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("15_6jldt")
camera_object = NodePath("../../GameWorld/Camera2D")
zoom = 4
tilemap = NodePath("../../GameWorld/TileMap")

[node name="MarginContainer" type="MarginContainer" parent="GUICanvasLayer/MapControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Background" type="TextureRect" parent="GUICanvasLayer/MapControl/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_1wep1")
expand_mode = 1

[node name="TileMapMarker" type="Node2D" parent="GUICanvasLayer/MapControl/MarginContainer/Background" node_paths=PackedStringArray("tilemap")]
script = ExtResource("19_xu1vl")
tilemap = NodePath("../../../../../GameWorld/TileMap")

[node name="PlayerMarker" type="Sprite2D" parent="GUICanvasLayer/MapControl/MarginContainer/Background"]
visible = false
position = Vector2(40, 40)
texture = ExtResource("15_osyca")

[node name="DangerMarker" type="Sprite2D" parent="GUICanvasLayer/MapControl/MarginContainer/Background"]
visible = false
position = Vector2(18.345, 20)
texture = ExtResource("16_bratw")

[node name="KingMarker" type="Sprite2D" parent="GUICanvasLayer/MapControl/MarginContainer/Background"]
visible = false
texture = ExtResource("17_k18ke")

[node name="Rectangle2D" parent="GUICanvasLayer/MapControl/MarginContainer/Background" instance=ExtResource("18_ffctd")]
color = Color(0, 0.921569, 0.203922, 1)
width = 100
height = 60

[node name="PauseHandler" type="Node" parent="."]
process_mode = 3
script = ExtResource("14_yq3yx")

[connection signal="died" from="GameWorld/King" to="." method="_on_king_died"]
[connection signal="died" from="GameWorld/King" to="GUICanvasLayer" method="show_end_message"]
